[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_x8w7p"]

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_x8w7p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="InstructionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
